# collect

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  vscode_commands.md
Cartridge/: MANIFEST.in  README.md  package_usage.json  pyproject.toml
Cartridge/modules/database/: connectors.py  requirements.txt  tools.py
Cartridge/modules/debug/: expectation_cli.py  expectations.py
Cartridge/src/m/: cli.py
Cartridge/src/m/cookiecutter/: cookiecutter.json
Cartridge/src/m/cookiecutter/{{ cookiecutter.project_name }}/: pyproject.toml
Cartridge/src/m/cookiecutter/{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_slug }}/: cli.py
Metis/: .dockerignore  .gitignore  Dockerfile.webapp  Dockerfile.workflow  MANIFEST.in  README.md  pyproject.toml
Metis/documentation/: Configuration File.md  Data Requirements.md  Database Tables.md  FAQ.md  Setup.md
Metis/src/metis/: __init__.py  cli.py  press_deploy.py  workflow_bootstrap.py
Metis/src/metis/configuration/: __init__.py  config_files.py  configuration_classes.py  glossary_classes.py
Metis/src/metis/model_training/: __init__.py  feed_forward_model_constructor.py  lightgbm_model_constructor.py  model_validation.py  train_meta_model.py
Metis/src/metis/the_emporium/: README.md  package-lock.json  package.json
Metis/src/metis/the_emporium/src/ts/: index.ts
Metis/src/metis/the_emporium/src/ts/components/: ForcePlot.tsx  squibble.tsx
Metis/src/metis/the_emporium/the_emporium/: ForcePlot.py  __init__.py  _imports_.py  metadata.json  squibble.py  the_emporium.js
Metis/src/metis/utility_tools/: connect.py  data_constructor.py  github_tools.py  hermes.py  model_tools.py  s3_tools.py  shap_tools.py
Metis/src/metis/utility_tools/promt_library/: beeswarm_promt.jinja
Metis/src/metis/webapp/: app.py  fetch_data.py  plotly_wrapped.py  webapp_utils.py
Metis/src/metis/webapp/assets/: buttons.css  core.css  modals.css  tabs.css  typography.css
Metis/src/metis/webapp/pages/: home.py
Metis/src/metis/webapp/webapp_components/: utils.py
Metis/src/metis/webapp/webapp_components/basics/: __init__.py
Metis/src/metis/webapp/webapp_components/basics/glossary/: glossary.py
Metis/src/metis/webapp/webapp_components/basics/modals/: modals.py
Metis/src/metis/webapp/webapp_components/data_tables/: __init__.py
Metis/src/metis/webapp/webapp_components/other/: __init__.py
Metis/src/metis/webapp/webapp_components/plots/: __init__.py
Metis/src/metis/workflows/: create_shap_values.py  train_explain_models.py  workflow_fetch_data.py
Proteus/: README.md  pyproject.toml
Proteus/src/proteus/: __init__.py  build_train_test_validation_split.py  connect.py  dev_test_prod_utils.py  io_tools.py  traning_workflow.py
Proteus/src/proteus/config/: config.py  pydantic_models.py
Proteus/src/proteus/model_tools/: data_constructor.py  data_processing.py  model_constructor.py  model_utils.py  s3_tools.py
Proteus/src/proteus/workflow_steps/: create_data_step.py  create_final_model_output_step.py  train_model_step.py  validate_model_step.py
(+65 files in other folders)
