[project]
name = "collect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mike", email = "michael@eyecatching.co.uk" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
