[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project]
name = "metis"
version = "0.0.2"
authors = [
  { name="Mike O'Donnell", email="michael.odonnell@peak.ai" },
]
description = "Code for the Model Exaplin dashboard called Metis."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies=[
    "pandas>=2.2.1",
    "peak-sdk==1.5.0",
    "plotly>=5.16.1",
    "kaleido>=0.2.1",
    "dash>=2.16.1",
    "dash-bootstrap-components>=1.4.0",
    "dash-extensions>=1.0.3",
    "dash-mantine-components",
    "dash-iconify",
    "gunicorn>=20.1.0",
    "sqlalchemy<2.0",
    "shap>=0.45.0",
    "pydantic>=2.7.0",
    "typer",
    "statsmodels",
    "pygithub",
    "natsort",
    "lightgbm",
    "scikit-learn>=1.3.0",
    "tensorflow==2.15.1",
    "keras-tuner==1.4.6",
    "openai",
]

[project.scripts]
model_explain = "metis.cli:app"
metis = "metis.cli:app"
